--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "cordova": {
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ],
     "plugins": {
       "cordova-plugin-globalization": {},
@@ -24,7 +24,6 @@
       "cordova-plugin-ignore-lint-translation": {},
       "cordova-plugin-advanced-websocket": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-add-swift-support": {},
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-advanced-http": {
         "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
@@ -50,7 +49,8 @@
       "cordova-plugin-photo-library-zm": {
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
       },
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-ionic-webview": {}
     }
   },
   "dependencies": {
@@ -59,7 +59,6 @@
     "compare-func": "^2.0.0",
     "cordova": "^12.0.0",
     "cordova-library-helper-pp-fork": "^1.0.1",
-    "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-http": "3.3.1",
     "cordova-plugin-advanced-websocket": "^1.1.8",
     "cordova-plugin-android-fingerprint-auth": "^1.5.0",
@@ -117,6 +116,7 @@
     "cordova-plugin-file": "^8.1.3",
     "cordova-plugin-file-transfer": "github:apache/cordova-plugin-file-transfer",
     "cordova-plugin-firebasex": "^18.0.5",
+    "cordova-plugin-ionic-webview": "github:ZoneMinder/cordova-plugin-ionic-webview",
     "cordova-plugin-media": "^7.0.0",
     "cordova-plugin-photo-library-zm": "^3.0.6",
     "cordova-plugin-x-socialsharing": "github:SteveGilvarry/Cordova-plugin-socialsharing-zm",
