--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "cordova": {
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ],
     "plugins": {
       "cordova-plugin-globalization": {},
@@ -47,11 +47,12 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-cloud-settings": {},
       "cordova-plugin-file": {},
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-certificates-pp-fork": {},
+      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-photo-library-zm": {
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
-      },
-      "cordova-plugin-x-socialsharing": {},
-      "cordova-plugin-certificates-pp-fork": {}
+      }
     }
   },
   "dependencies": {
@@ -103,10 +104,11 @@
     "cordova-plugin-inappbrowser": "^6.0.0",
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^5.0.1",
     "cordova-plugin-media": "^7.0.0",
     "cordova-plugin-multi-window": "^0.0.3",
     "cordova-plugin-network-information": "^3.0.0",
-    "cordova-plugin-photo-library-zm": "^3.0.6",
+    "cordova-plugin-photo-library-zm": "file:../cordova-plugin-photo-library-zm",
     "cordova-plugin-pin-dialog": "^0.1.3",
     "cordova-plugin-statusbar": "^4.0.0",
     "cordova-plugin-touch-id": "^3.4.0",
@@ -121,6 +123,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^6.0.1",
+    "help": "^3.0.2",
     "jshint": "^2.13.6",
     "json-file": "^0.1.0",
     "keypress": "^0.2.1",
