--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "cordova": {
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ],
     "plugins": {
       "cordova-plugin-globalization": {},
@@ -47,9 +47,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-cloud-settings": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-photo-library-zm": {
-        "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
-      },
       "cordova-plugin-x-socialsharing": {},
       "cordova-plugin-certificates-pp-fork": {},
       "cordova-plugin-firebasex": {
@@ -83,6 +80,10 @@
         "ANDROID_GSON_VERSION": "2.11.0",
         "ANDROID_FIREBASE_PERF_GRADLE_PLUGIN_VERSION": "1.4.2",
         "ANDROID_GRPC_OKHTTP": "1.68.0"
+      },
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-photo-library-zm": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
       }
     }
   },
@@ -129,7 +130,6 @@
     "cordova-plugin-device": "^3.0.0",
     "cordova-plugin-file": "^8.1.3",
     "cordova-plugin-file-transfer": "github:apache/cordova-plugin-file-transfer",
-    "cordova-plugin-firebase": "^2.0.6",
     "cordova-plugin-firebasex": "^18.0.5",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-ignore-lint-translation": "^0.0.1",
@@ -140,7 +140,7 @@
     "cordova-plugin-media": "^7.0.0",
     "cordova-plugin-multi-window": "^0.0.3",
     "cordova-plugin-network-information": "^3.0.0",
-    "cordova-plugin-photo-library-zm": "file:../cordova-plugin-photo-library-zm",
+    "cordova-plugin-photo-library-zm": "^3.0.7",
     "cordova-plugin-pin-dialog": "^0.1.3",
     "cordova-plugin-statusbar": "^4.0.0",
     "cordova-plugin-touch-id": "^3.4.0",
