--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@capacitor/push-notifications": "^7.0.3",
     "@capacitor/splash-screen": "^7.0.3",
     "@capacitor/status-bar": "^7.0.3",
+    "@miaz/capacitor-websocket": "^0.6.0",
     "@capgo/capacitor-native-biometric": "^7.1.13",
     "async": "^3.2.6",
     "deep-equal": "^2.2.3",
