--- a/package.json
+++ b/package.json
@@ -14,30 +14,12 @@
       "ios",
       "android"
     ],
-    "plugins": {
-      "cordova-plugin-insomnia": {},
-      "cordova-plugin-multi-window": {},
-      "cordova-plugin-ignore-lint-translation": {},
-      "cordova-plugin-advanced-websocket": {},
-      "cordova-plugin-android-permissions": {},
-      "cordova-plugin-media": {
-        "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
-      },
-      "cordova-sqlite-storage": {},
-      "cordova-plugin-customurlscheme": {
-        "URL_SCHEME": "zmninja",
-        "ANDROID_SCHEME": " ",
-        "ANDROID_HOST": " ",
-        "ANDROID_PATHPREFIX": "/"
-      },
-      "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-network-information": {},
-      "cordova-plugin-cloud-settings": {},
-      "cordova-plugin-x-socialsharing": {}
-    }
+    "plugins": {}
   },
   "dependencies": {
+    "@capacitor-community/keep-awake": "^7.1.0",
     "@capacitor-community/media": "^8.0.1",
+    "@capacitor-community/native-audio": "^7.0.1",
     "@capacitor/android": "^7.4.3",
     "@capacitor/app": "^7.1.0",
     "@capacitor/browser": "^7.0.2",
@@ -47,13 +29,15 @@
     "@capacitor/haptics": "^7.0.2",
     "@capacitor/ios": "^7.4.3",
     "@capacitor/keyboard": "^7.0.3",
+    "@capacitor/network": "^7.0.2",
     "@capacitor/preferences": "^7.0.2",
     "@capacitor/push-notifications": "^7.0.3",
     "@capacitor/splash-screen": "^7.0.3",
     "@capacitor/status-bar": "^7.0.3",
-    "@miaz/capacitor-websocket": "^0.6.0",
     "@capgo/capacitor-native-biometric": "^7.1.13",
+    "@miaz/capacitor-websocket": "^0.6.0",
     "async": "^3.2.6",
+    "capacitor-email-composer": "^7.0.2",
     "deep-equal": "^2.2.3",
     "define-properties": "^1.2.1",
     "dialog": "^0.3.1",
@@ -80,21 +64,6 @@
     "bower": "^1.8.14",
     "clivas": "^0.2.0",
     "compare-func": "^2.0.0",
-    "cordova": "^12.0.0",
-    "cordova-android": "^14.0.1",
-    "cordova-ios": "^7.1.1",
-    "cordova-plugin-advanced-websocket": "^1.1.8",
-    "cordova-plugin-android-permissions": "^1.1.5",
-    "cordova-plugin-app-version": "^0.1.14",
-    "cordova-plugin-cloud-settings": "^2.0.1",
-    "cordova-plugin-customurlscheme": "^5.0.2",
-    "cordova-plugin-inappbrowser": "^6.0.0",
-    "cordova-plugin-insomnia": "^4.3.0",
-    "cordova-plugin-media": "^7.0.0",
-    "cordova-plugin-multi-window": "^0.0.3",
-    "cordova-plugin-network-information": "^3.0.0",
-    "cordova-plugin-x-socialsharing": "github:SteveGilvarry/Cordova-plugin-socialsharing-zm",
-    "cordova-sqlite-storage": "^6.1.0",
     "dotenv": "^16.4.7",
     "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
